--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "friday-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://marinagherman.github.io/friday-project",
+  "homepage": "https://marinagherman.github.io/friday-project/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
